--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <body>
 
-<h2>Tracez la zone sécurisée 🐪</h2>
+<h2>Définir la zone sécurisée 🐪</h2>
+<p>Veuillez tracer la zone sécurisée correspondant à l’aire de surveillance du dromadaire. Vous pouvez définir une zone polygonale ou circulaire selon vos besoins. Cette zone permettra de détecter toute sortie hors périmètre sécurisé.</p>
 
 <div id="map"></div>
 
