--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Définir une zone sécurisée</title>
   <style>
     #map { height: 600px; width: 100%; margin-bottom: 20px; }
@@ -22,8 +22,7 @@
 
 <body>
 
-<h2>Définir la zone sécurisée 🐪</h2>
-<p>Veuillez tracer la zone sécurisée correspondant à l’aire de surveillance du dromadaire. Vous pouvez définir une zone polygonale ou circulaire selon vos besoins. Cette zone permettra de détecter toute sortie hors périmètre sécurisé.</p>
+<h2>Tracez la zone sécurisée 🐪</h2>
 
 <div id="map"></div>
 
@@ -33,6 +32,9 @@
 <pre id="output"></pre>
 
 <script>
+  // Adresse IP de ton PC où tourne Flask — MODIFIE ICI selon ton réseau !
+  const SERVER_URL = 'http://192.168.14.15:5000/send';
+
   // Initialisation de la carte
   const map = L.map('map').setView([33.8925, 9.5616], 15); // Tunisie
 
@@ -128,13 +130,19 @@
       data = `CIRCLE\n${center.lat.toFixed(6)},${center.lng.toFixed(6)}\nRADIUS:${radius.toFixed(2)}\nCIRCLE_END`;
     }
 
-    fetch('http://localhost:5000/send', {
+    fetch(SERVER_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ data })
     })
-    .then(response => response.text())
+    .then(response => {
+      if (!response.ok) throw new Error('Erreur HTTP ' + response.status);
+      return response.text();
+    })
     .then(result => alert(result))
-    .catch(error => alert("Erreur lors de l'envoi : " + error));
+    .catch(error => alert("Erreur lors de l'envoi : " + error.message));
   }
 </script>
+
+</body>
+</html>
